--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "format": "prettier --write .",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
+    "daisyui": "latest",
+    "prettier": "^3.2.4",
+    "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^3.49.0",
+    "tailwindcss": "^3.4.1",
     "vite": "^3.1.0"
   }
 }
