--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "binaural-beat-gen",
+  "name": "pulsify",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "format": "prettier --write .",
-    "preview": "vite preview"
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
