--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "dist": "vite build",
     "format": "prettier --write ."
   },
   "devDependencies": {
